Work on welcome page

--- a/static/index.html
+++ b/static/index.html
@@ -7,9 +7,40 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/css/foundation.min.css">
     <!-- Compressed JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/js/foundation.min.js"></script>
+    <!-- Our own StyleSheet -->
+    <link rel="stylesheet" href="../static/css/stylesheet.css">
   </head>
   <body>
-
+    <div class="top-bar grid-x">
+      <div class="top-bar-left small-10"><h3>QAFFLE</h3></div>
+      <div class="top-bar-right small-2 ">
+        <div class="button-group grid-x">
+          <a class="button small-5"href="/login">Login</a>
+          <div class="small-1"></div>
+          <a class="button small-5"href="/signup">Sign Up</a>
+      </div>
     </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <div class="title-bar grid-x"><h4 class="columns small-12">Welcome to QUAFFLE</h4></div>
+  <br>
+  <br>
+  <br>
+  <div class="grid-x">
+    <!-- <div class="row"> -->
+      <!-- <div class="columns small-10 small-centered"> -->
+        <img class="thumbnail columns small-8 small-centered" src="../static/images/crew.jpeg" alt="the squadfam">
+      <!-- </div> -->
+    <!-- </div> -->
+  </div>
+  <br>
+  <br>
+  <div class="grid-x">
+    <div class="row">
+      <h5 class="columns small-12">A new QAF for a new age...</h5>
+    </div>
+  </div>
   </body>
 </html>
