Add welcome page frontend

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/js/foundation.min.js"></script>
     <!-- Our own StyleSheet -->
     <link rel="stylesheet" href="../static/css/stylesheet.css">
+    <!-- Custom Font -->
+    <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-bar grid-x">
@@ -24,8 +26,10 @@
   <br>
   <br>
   <br>
-  <div class="title-bar grid-x"><h4 class="columns small-12">Welcome to QUAFFLE</h4></div>
   <br>
+  <div class="grid-x">
+    <h1 class="columns small-12">Welcome to QAFFLE</h1>
+  </div>
   <br>
   <br>
   <div class="grid-x">
@@ -38,9 +42,21 @@
   <br>
   <br>
   <div class="grid-x">
-    <div class="row">
-      <h5 class="columns small-12">A new QAF for a new age...</h5>
+    <h5 class="columns small-12">A new QAF for a new age...</h5>
+  </div>
+  <br>
+  <br>
+  <div class="grid-x">
+    <p class="columns small-8 small-offset-2">The QAFFLE is the next generation solution to the old and bland QAF. Similar in premise, the QAFFLE allows users to create posts and comment at its most basic level. The frontend will be sleek and sexy. The backend will be snappy and robust. We will be implementing features not offered in the original QAF to enhance the user experience. Welcome to the new age. Welcome to QAFFLE.</p>
+  </div>
+  <br>
+  <div class="grid-x">
+    <div class="columns small-8 small-offset-2 ">
+      <a class="expanded button" href="/login"><h5>Come join us...</h5></a>
     </div>
   </div>
+  <br>
+  <br>
+  <br>
   </body>
 </html>
